# NER-serving

./: .dockerignore  .gitignore  Dockerfile  README.md  benchmark.py  convert_to_onnx.py  generate_data.py  model.py  pyproject.toml  run.sh  send_requests.py
model_repository/ensemble_model/: config.pbtxt
model_repository/postprocess/: config.pbtxt
model_repository/postprocess/1/: model.py
model_repository/tokenizer/: config.pbtxt
model_repository/tokenizer/1/: model.py
model_repository/transformer/: config.pbtxt
scripts/: copy_model.sh  run_profiler.sh  run_triton.sh
