[tool.poetry]
name = "ner-serving"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
transformers = "^4.40.1"
torch = "^2.3.0"
optimum = {extras = ["exporters", "onnxruntime"], version = "^1.19.1"}
onnxruntime-gpu = {version = "^1.17.1", source = "onnx_cuda12"}

[[tool.poetry.source]]
name = "onnx_cuda12"
url = "https://aiinfra.pkgs.visualstudio.com/PublicPackages/_packaging/onnxruntime-cuda-12/pypi/simple/"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
